# teapot.nz

./: CNAME  README.md  archives.html  authors.html  categories.html  index.html  pelicanconf.py  publish.sh  pyproject.toml  search-index.st  search.toml  sitemap.xml  tags.html
author/: olly.html
category/: post.html
content/: 01-welcome.md
content/pages/: about.md
pages/: about.html
posts/2023/11/welcome-to-teapotnz/: index.html
themes/simplify-theme/templates/: base.html
